Change title from 'الأجندة الشهرية المتقدمة' to 'طلال السريتي'

--- a/agenda.html
+++ b/agenda.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="الأجندة">
     
-    <title>الأجندة الشهرية المتقدمة</title>
+    <title>طلال السريتي</title>
 </head>
 <body>
 
