Update title and add meta tags in cairo.html

--- a/cairo.html
+++ b/cairo.html
@@ -5,7 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تطبيق الطقس والوقت</title>
+
+    <link rel="manifest" href="cairo.json">
+    <link rel="stylesheet" href="cairo.css">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="الأجندة">
+    
+    <title>طلال السريتي</title>
    </head>
 
 <body>
@@ -48,7 +56,7 @@
             جاري تحديث البيانات...
         </div>
     </div>
-
+<script src="cairo.js"></script>
 </body>
 
 </html>
