--- a/auditproc.html
+++ b/auditproc.html
@@ -430,7 +430,7 @@
 
             async loadConfigAndInit() {
                 try {
-                    const response = await fetch('auditproclink.json');
+                    const response = await fetch('https://talalcer.github.io/auditproclink.json');
                     if (!response.ok) throw new Error('Failed to load config');
                     window.Config = await response.json();
                     this.initLinks();
@@ -507,3 +507,4 @@
 </body>
 
 </html>
+
