Fix HTML encoding issues in intosai.html

--- a/intosai.html
+++ b/intosai.html
@@ -208,7 +208,7 @@
         </div>
 
         <div class="logo-box">
-            <img src="https://talalcer.github.io/fuel-img/talal512.png" alt="Personal Photo">
+            <img src="https://talalcer.github.io/fuel-img/auditortool5.png" alt="Personal Photo">
         </div>
     </header>
 
@@ -313,4 +313,5 @@
 
 
 </html>
+
 
